# marketplace-api

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mongo-init.js  pyproject.toml  requirements.txt
src/: api.py
src/business/chat/: __init__.py  models.py  routes.py  schemas.py
src/business/friends/: __init__.py  models.py  routes.py  schemas.py
src/business/groups/: __init__.py  models.py  routes.py  schemas.py
src/business/marketplace/items/: models.py
src/business/marketplace/transactions/: models.py
src/business/user/: __init__.py  models.py  routes.py  schemas.py  service.py
src/core/: config.py  db.py
src/scripts/: add_friendship.py  create_admin.py  generate_diagrams.py
